k8s/monitoring/sonarqube-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonar.gauzian.pupin.fr`)
      kind: Rule
      services:
        - name: sonarqube
          port: 9000
  tls:
    certResolver: letsencrypt
